# agent-control

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  Makefile  PLAN.md  README.md  THIRD_PARTY.md  deny.toml  mkdocs.yml  requirements-docs.txt
.github/workflows/: ci.yml  pages.yml
apps/lab/: Cargo.toml
apps/lab/src/: agent.rs  main.rs  smoke.rs
apps/soc/: Cargo.toml
apps/soc/src/: agent.rs  config.rs  gate.rs  main.rs  triage.rs
catalog/: README.md  owasp-llm-asi.yaml
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs
crates/guardian/: Cargo.toml
crates/guardian/src/: decision.rs  engine.rs  hook.rs  jsonrpc.rs  lib.rs  policy.rs  request.rs  tests.rs
crates/trace/: Cargo.toml
crates/trace/src/: lib.rs  ocsf.rs  span.rs
deploy/on-prem/: README.md
docs/: getting-started.md  index.md
docs/architecture/: acs-hooks.md  guardian.md  repo-layout.md  security-boundary.md  trace.md
docs/operations/: development.md  on-prem.md
docs/plan/: coc-metrics.md  cs01-soc-slice.md  index.md  monorepo-layout.md  mvps-and-challenges.md  p0-smoke-suite.md  phase1-trial.md  purpose.md  references.md  risks.md  schedule.md  submission-dod.md  success-checklist.md  technology.md
docs/submission/: README.md  acs-alignment.md  demo.md  owasp-coverage.md  phase1-trial.md  progress.md  roadmap.md
examples/: ocsf-deny-tool.json  ocsf-events.json  smoke-report.json  soc-ocsf-events.json  soc-triage-report.json
examples/alerts/: sample-siem-alert.json
policies/p0/: README.md  deny-agbom.yaml  deny-dangerous-tools.yaml  deny-inter-agent.yaml  deny-rag-injection.yaml  deny-runaway.yaml  deny-tool-misuse.yaml  gate-human-trust.yaml
policies/soc/: deny-destructive-remediation.yaml  gate-analyst-approval.yaml
