[package]
name = "lab"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CS02 CI/CD Observed Agent and P0 smoke harness (scaffold)"
default-run = "lab"

[[bin]]
name = "lab"
path = "src/main.rs"

[dependencies]
guardian = { path = "../../crates/guardian" }
serde_json = { workspace = true }
trace = { path = "../../crates/trace" }
