[package]
name = "lab"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CS02 CI/CD Observed Agent and P0 smoke harness"
default-run = "lab"

[[bin]]
name = "lab"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
guardian = { path = "../../crates/guardian" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
