[package]
name = "soc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CS01 alert-triage Observed Agent (scaffold)"
default-run = "soc"

[[bin]]
name = "soc"
path = "src/main.rs"

[dependencies]
guardian = { path = "../../crates/guardian" }
trace = { path = "../../crates/trace" }
