[package]
name = "soc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CS01 alert-triage Observed Agent (OOTB playbook)"
default-run = "soc"

[[bin]]
name = "soc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
guardian = { path = "../../crates/guardian" }
serde = { workspace = true }
serde_json = { workspace = true }
trace = { path = "../../crates/trace" }
thiserror = { workspace = true }
