[package]
name = "guardian"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ACS Instrument hooks and YAML policy engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
catalog = { path = "../catalog" }
tempfile = "3"
