[package]
name = "trace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenTelemetry-style spans to OCSF JSON export for ACS Trace"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
guardian = { path = "../guardian" }
